# treinaweb-artigo-publicacao-pacotes-python

./: README.md  pyproject.toml  requirements.txt
twblog_reader/: __main__.py  entities.py  feed.py  ui.py
