[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twblog"
version = "0.1.0"
description = "Um simples leitor de artigos do blog da TreinaWeb"
readme = "README.md"
authors = [
    { name = "Cleyson Lima", email = "cleyson.lima@treinaweb.com.br" }
]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
keywords = ["twblog", "treinaweb", "blog", "terminal", "cli"]
requires-python = ">=3.9"
dependencies = ["requests>=2.28.1", "html2text>=2020.1.16", "beautifulsoup4>=4.11.1"]

[project.optional-dependencies]
    build = ["build", "twine"]
    dev = ["black", "mypy", "types-requests>=2.28.9"]

[project.scripts]
twblog = "twblog_reader.__main__:main"

[tool.mypy]
strict = true